--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,66 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url("fonts/Montserrat-Light.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .header-items {
   width: 100%;
   display: flex;
+  border-bottom: 2px solid;
+  border-color: #7bb96e;
+  padding: 0px;
+}
+
+body {
+  margin: 0;
 }
 
 .header-links {
-  border: 1px dashed;
+  /* border: 1px dashed; */
   display: flex;
   align-items: center;
-  justify-content: center;
   margin-left: auto;
+  /* margin-right: 100px; */
 }
 
 .vip-life-coach-logo {
-  border: 1px dotted;
+  /* border: 1px dotted; */
   width: 10%;
+  height: 10%;
 }
 
 .header-link {
-  border: 1px dotted;
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  position: relative;
+  /* border: 1px dotted; */
   padding: 10px;
   text-decoration: none;
   color: black;
+}
+
+.header-link:hover::after {
+  /* content: attr(data-text); */
+  position: absolute;
+  text-align: center;
+  left: 0;
+  width: 100%; /* Expand the line to full width on hover */
+  background-color: #7bb96e;
+  z-index: -1;
+}
+
+.header-link::after {
+  content: ""; /* Empty content for the line */
+  position: absolute;
+  right: 0; /* Where it transitions towards! */
+  width: 0; /* Start with no width */
+  height: 5%; /* Thickness of the line */
+  bottom: 0;
+  background-color: #7bb96e;
+  transition: width 0.3s ease; /* Smooth transition */
+  z-index: -1;
 }
