--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -64,3 +64,25 @@ body {
   transition: width 0.3s ease; /* Smooth transition */
   z-index: -1;
 }
+
+.header-link-active-page {
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  position: relative;
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.header-link-active-page::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #7bb96e;
+  z-index: -1;
+}
