--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -90,7 +90,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2px;
+  height: 5%;
   background-color: #7bb96e;
   z-index: -1;
 }
@@ -101,8 +101,10 @@ body {
   margin-left: auto;
   flex-direction: column;
   position: absolute;
+  background-color: #ffffff;
   right: 0;
   z-index: 10;
+  border-bottom: #7bb96e solid;
 }
 
 @media screen and (min-width: 0px) and (max-width: 800.67px) {
@@ -167,5 +169,28 @@ body {
     padding: 10px;
     text-decoration: none;
     color: black;
+  }
+
+  .header-link::after {
+    content: ""; /* Empty content for the line */
+    position: absolute;
+    right: 0; /* Where it transitions towards! */
+    width: 0; /* Start with no width */
+    height: 100%; /* Thickness of the line */
+    bottom: 0;
+    background-color: #7bb96e;
+    transition: width 0.3s ease; /* Smooth transition */
+    z-index: -1;
+  }
+
+  .header-link-active-page::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #7bb96e;
+    z-index: -1;
   }
 }
